Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-21527

[Regression 4.7->4.8] QML Editor: Workflow is broken

XMLWordPrintable

    • Linux/X11, macOS, Windows
    • c96b707cfbcf93724b932dd87e5bd6ca4988831b (qt-creator/qt-creator/master)

      Steps to reproduce:

      • open QC, create a Qt Quick Application from template (Empty)
      • place cursor before the closing curly brace of the root element + hit Enter to get some empty lines
      • place cursor into one of the empty lines
      • create a Text element
        • inside the Text element use an anchors.centerIn property and assign it to parent

      This usually worked by just typing par as value and hitting Enter.

      Now this inserts parentChanged() instead and the cursor is located inside the braces.

       

      Note: This is mainly caused by 24543f783906ff21a1f1d01c69d9fe79e71b2726 and a different order scheme (for the proposals) that is used inside the QmlJS code model.

      The order for the proposals need to get adjusted to prioritize shorter proposals over longer ones.

       

        For Gerrit Dashboard: QTCREATORBUG-21527
        # Subject Branch Project Status CR V

            davschul David Schulz
            cstenger Christian Stenger
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes