QmlJsEditor: fix completion item order

Items with assigned data were preferred over items without data, leading
to always preferring some special functions over objects like parent and
parentChanged.

Change-Id: I69e7e3ee2e80283daa16cd3df0260ebdb9a2b7f9
Fixes: QTCREATORBUG-21527
Reviewed-by: Thomas Hartmann <thomas.hartmann@qt.io>